--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 </a>
             </div>
             <div class="col-xs-12 col-md-4">
-                <a href="https://docs.jinmu.info/the-little-mongodb-book/#/">
+                <a href="https://docs.jinmu.info/the-little-mongodb-book/">
                     <img src="picture/thelittlemongodbbook.jpg" class="img-responsive" alt="" width="auto"
                          height="100%">
 
