--- a/index.html
+++ b/index.html
@@ -278,6 +278,15 @@
                 </a>
             </div>
 
+            <div class="col-xs-12 col-md-4">
+                <a href="https://github.com/JinMuInfo/python">
+                    <img src="picture/python.jpeg" class="img-responsive" alt="" width="auto"
+                         height="100%">
+
+                    <h3>Python 基础</h3>
+                </a>
+            </div>
+
 
         </div>
         
