--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <div class="testimonial">
             <div class="testimonial-content">
               <p>除了提到的这些还有别的么？</p>
-              <div class="testimonial-meta">答：一方面我么有一些自研产品 已经开放了，如需了解更多可以致电我们，另外我们也可以定制化开发的。</div>
+              <div class="testimonial-meta">答：一方面我们有一些自研产品 已经开放了，如需了解更多可以致电我们，另外我们也可以定制化开发的。</div>
             </div>
           </div>
         </div>
@@ -261,7 +261,7 @@
                 </a>
             </div>
             <div class="col-xs-12 col-md-4">
-                <a href="https://github.com/JinMuInfo/Mongo-Driver-Usage">
+                <a href="https://github.com/JinMuInfo/Mongo-Driver-Usage/">
                     <img src="picture/driver.jpeg" class="img-responsive" alt="" width="auto"
                          height="100%">
 
@@ -270,7 +270,7 @@
             </div>
 
             <div class="col-xs-12 col-md-4">
-                <a href="https://github.com/JinMuInfo/discussion-for-mongo">
+                <a href="https://github.com/JinMuInfo/discussion-for-mongo/">
                     <img src="picture/driver.jpeg" class="img-responsive" alt="" width="auto"
                          height="100%">
 
@@ -279,7 +279,7 @@
             </div>
 
             <div class="col-xs-12 col-md-4">
-                <a href="https://github.com/JinMuInfo/python">
+                <a href="https://github.com/JinMuInfo/python/">
                     <img src="picture/python.jpeg" class="img-responsive" alt="" width="auto"
                          height="100%">
 
