--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <meta name="keywords" content="doc,docs,MongoDB,手册,中文,翻译,在线预览,MongoDB中文手册,MongoDB中文文档,MongoDB汉化文档">
  <!-- Favicons
  ================================================== -->
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="picture/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
