--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             </div>
 
             <div class="col-xs-12 col-md-4">
-                <a href="https://github.com/JinMuInfo/python/">
+                <a href="https://docs.jinmu.info/python/">
                     <img src="picture/python.jpeg" class="img-responsive" alt="" width="auto"
                          height="100%">
 
