--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>锦木信息文档专栏</title>
- <meta name="description" content="Mongodb中文手册,教材,MongoDB，MongoDB中文网,MongoDB中文,MongoDB官网 ">
+ <meta name="description" content="Mongodb中文手册,教材,MongoDB，MongoDB中文网,MongoDB中文,MongoDB官网,Akamai,vonage">
  <meta name="keywords" content="doc,docs,MongoDB,手册,中文,翻译,在线预览,MongoDB中文手册,MongoDB中文文档,MongoDB汉化文档">
  <!-- Favicons
  ================================================== -->
