--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="col-xs-12 col-md-4">
                 <a href="https://docs.jinmu.info/MongoDB-Manual-zh/">
 
-                    <img src="picture/mongo.jpg" class="img-responsive" alt="88x88" href="https://docs.jinmu.info/MongoDB-Manual-zh/"
+                    <img src="picture/timg.jpg" class="img-responsive" alt="88x88" href="https://docs.jinmu.info/MongoDB-Manual-zh/"
                          style="width: 220px; height: 220px;">
 
                 <div class="service-desc">
