--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-12 col-md-4">
+           <!-- <div class="col-xs-12 col-md-4">
                 <a href="https://docs.jinmu.info/MongoDB-Manual-zh/">
 
                     <img src="picture/timg.jpg" class="img-responsive" alt="88x88" href="https://docs.jinmu.info/MongoDB-Manual-zh/"
@@ -234,7 +234,16 @@
                     <h3>MongoDB中文手册</h3>
                 </div>
                 </a>
+            </div>-->
+            <div class="col-xs-12 col-md-4">
+                <a href="https://docs.jinmu.info/MongoDB-Manual-zh/">
+                    <img src="picture/timg.jpg" class="img-responsive" alt="" width="auto"
+                         height="100%">
+
+                    <h3>MongoDB中文手册 </h3>
+                </a>
             </div>
+
             <div class="col-xs-12 col-md-4">
                 <a href="https://docs.jinmu.info/the-little-mongodb-book/">
                     <img src="picture/thelittlemongodbbook.jpg" class="img-responsive" alt="" width="auto"
