--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <li><a href="#about" class="page-scroll">服务</a></li>
         <li><a href="#services" class="page-scroll">产品</a></li>
         <li><a href="#testimonials" class="page-scroll">答疑</a></li>
-        <li><a href="#portfolio" class="page-scroll">产品</a></li>
+        <li><a href="#portfolio" class="page-scroll">文档</a></li>
         <!-- 
         <li><a href="#team" class="page-scroll">团队</a></li> -->
         <li><a href="#contact" class="page-scroll">联系</a></li>
