文档专栏分开

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>锦木信息文档专栏</title>
- <meta name="description" content="Mongodb中文手册,教材,MongoDB，MongoDB中文网,MongoDB中文,MongoDB官网,Akamai,vonage">
- <meta name="keywords" content="doc,docs,MongoDB,手册,中文,翻译,在线预览,MongoDB中文手册,MongoDB中文文档,MongoDB汉化文档">
+ <meta name="description" content="Mongodb中文手册,教材,MongoDB,MongoDB中文网,MongoDB中文,MongoDB官网,Akamai,vonage">
+ <meta name="keywords" content="MongoDB,手册,中文,翻译,在线预览,MongoDB中文手册,MongoDB中文文档,MongoDB汉化文档">
  <!-- Favicons
  ================================================== -->
 <link rel="shortcut icon" href="picture/favicon.ico" type="image/x-icon">
@@ -57,7 +57,9 @@
         <li><a href="#about" class="page-scroll">服务</a></li>
         <li><a href="#services" class="page-scroll">产品</a></li>
         <li><a href="#testimonials" class="page-scroll">答疑</a></li>
-        <li><a href="#portfolio" class="page-scroll">文档</a></li>
+          <li><a href="#mongodb" class="page-scroll">MongoDB中文专栏</a></li>
+        <li><a href="#develop" class="page-scroll">开发文档</a></li>
+          <li><a href="#devops" class="page-scroll">运维文档</a></li>
         <!-- 
         <li><a href="#team" class="page-scroll">团队</a></li> -->
         <li><a href="#contact" class="page-scroll">联系</a></li>
@@ -216,25 +218,26 @@
     </div>
   </div>
 
-<div id="portfolio" class="text-center">
+
+<div id="mongodb" class="text-center">
     <div class="container">
         <div class="section-title">
-            <h2>文档</h2>
-            <p>分享专业知识</p>
+            <h2>MongoDB文档专栏</h2>
+            <p>分享MongoDB专业知识</p>
         </div>
 
         <div class="row">
-           <!-- <div class="col-xs-12 col-md-4">
-                <a href="https://docs.jinmu.info/MongoDB-Manual-zh/">
+            <!-- <div class="col-xs-12 col-md-4">
+                 <a href="https://docs.jinmu.info/MongoDB-Manual-zh/">
 
-                    <img src="picture/timg.jpg" class="img-responsive" alt="88x88" href="https://docs.jinmu.info/MongoDB-Manual-zh/"
-                         style="width: 220px; height: 220px;">
+                     <img src="picture/timg.jpg" class="img-responsive" alt="88x88" href="https://docs.jinmu.info/MongoDB-Manual-zh/"
+                          style="width: 220px; height: 220px;">
 
-                <div class="service-desc">
-                    <h3>MongoDB中文手册</h3>
-                </div>
-                </a>
-            </div>-->
+                 <div class="service-desc">
+                     <h3>MongoDB中文手册</h3>
+                 </div>
+                 </a>
+             </div>-->
             <div class="col-xs-12 col-md-4">
                 <a href="https://docs.jinmu.info/MongoDB-Manual-zh/">
                     <img src="picture/timg.jpg" class="img-responsive" alt="" width="auto"
@@ -253,14 +256,7 @@
                 </a>
             </div>
 
-            <div class="col-xs-12 col-md-4">
-                <a href="https://docs.jinmu.info/linux/">
-                    <img src="picture/linux.jpg" class="img-responsive" alt="" width="auto"
-                         height="100%">
 
-                    <h3>linux 中文材料</h3>
-                </a>
-            </div>
             <div class="col-xs-12 col-md-4">
                 <a href="https://docs.jinmu.info/quick-learn-mongo/">
                     <img src="picture/disscussion.jpeg" class="img-responsive" alt="" width="auto"
@@ -287,6 +283,21 @@
                 </a>
             </div>
 
+        </div>
+
+    </div>
+</div>
+
+
+<div id="develop" class="text-center">
+    <div class="container">
+        <div class="section-title">
+            <h2>开发文档</h2>
+            <p>分享专业知识</p>
+        </div>
+
+        <div class="row">
+
             <div class="col-xs-12 col-md-4">
                 <a href="https://docs.jinmu.info/python/">
                     <img src="picture/python.jpeg" class="img-responsive" alt="" width="auto"
@@ -302,6 +313,32 @@
       </div>
 </div>
 
+
+<div id="devops" class="text-center">
+    <div class="container">
+        <div class="section-title">
+            <h2>运维文档</h2>
+            <p>分享专业知识</p>
+        </div>
+
+        <div class="row">
+
+
+            <div class="col-xs-12 col-md-4">
+                <a href="https://docs.jinmu.info/linux/">
+                    <img src="picture/linux.jpg" class="img-responsive" alt="" width="auto"
+                         height="100%">
+
+                    <h3>linux 中文材料</h3>
+                </a>
+            </div>
+
+
+
+        </div>
+
+    </div>
+</div>
 
 <!-- <div id="team" class="text-center">
   <div class="container">
