--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
             </div>
 
             <div class="col-xs-12 col-md-4">
-                <a href="https://github.com/JinMuInfo/discussion-for-mongo/">
+                <a href="https://docs.jinmu.info/discussion-for-mongo/">
                     <img src="picture/driver.jpeg" class="img-responsive" alt="" width="auto"
                          height="100%">
 
-                    <h3>MongoDB 问题讨论区</h3>
+                    <h3>MongoDB常见问题讨论区</h3>
                 </a>
             </div>
 
