--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>锦木信息文档专栏</title>
- <meta name="description" content="Mongodb中文手册,教材,MongoDB,MongoDB中文网,MongoDB中文,MongoDB官网,Akamai,vonage">
+ <meta name="description" content="上海锦木信息技术有限公司特设文档专栏主要用于分享MongoDB专业知识,服务社会,为技术爱好者提供一个平台">
  <meta name="keywords" content="MongoDB,手册,中文,翻译,在线预览,MongoDB中文手册,MongoDB中文文档,MongoDB汉化文档">
  <!-- Favicons
  ================================================== -->
