--- a/index.html
+++ b/index.html
@@ -306,6 +306,22 @@
                     <h3>Python 基础</h3>
                 </a>
             </div>
+            <div class="col-xs-12 col-md-4">
+                <a href="https://docs.jinmu.info/java/">
+                    <img src="picture/java_logo.jpg" class="img-responsive" alt="" width="auto"
+                         height="100%">
+
+                    <h3>Java 基础</h3>
+                </a>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <a href="https://docs.jinmu.info/leetcode/">
+                    <img src="picture/leetcode_logo.jpeg" class="img-responsive" alt="" width="auto"
+                         height="100%">
+
+                    <h3>没事LeetCode</h3>
+                </a>
+            </div>
 
 
         </div>
